--- a/style.css
+++ b/style.css
@@ -1,6 +1,4 @@
 * {
-  padding: 0;
-  margin: 0;
   box-sizing: border-box;
   background: #575757;
   /* background-color: gray; */
@@ -11,18 +9,21 @@ input {
   margin: 6%;
   width: 100%;
   cursor: pointer;
-  border-radius: 10px;
+  border-radius: 6px;
   color: wheat;
-  /* border-width: 0ch; */
   background-color: transparent;
 }
 tr {
   text-align: center;
 }
+td{
+  margin: 2%;
+}
 table {
   transform: translateY(30%);
   margin-top: auto;
   padding: 2%;
+  padding-right: 2.5%;
   margin: auto;
   border-radius: 7px;
   background: #575757;
@@ -34,7 +35,7 @@ table {
   margin: 0;
   text-align: right;
   padding-top: 20%;
-  padding-right: 18px;
+  padding-right: 5%;
   padding-bottom: 2%;
   margin-bottom: 1%;
   border-bottom: 1px solid rgb(148, 147, 144);
@@ -55,8 +56,8 @@ table {
   font-size: 1.2rem;
 }
 button {
-  border-radius: 10px;
-  padding: 4px;
+  border-radius: 6px;
+  padding: 5.7px;
   cursor: pointer;
   margin-left: 6%;
   width: 100%;
